saved the text inputted to local storage

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <div>
             <label for="9am-text">9:00 am</label>
             <input type="text" id="9am-text">
-            <button class="save-btn">Save</button>
+            <button class="save-btn" data-inputID="#9am-text">Save</button>
         </div>
 
         <div>
             <label for="10am-text">10:00 am</label>
             <input type="text" id="10am-text">
-            <button class="save-btn">Save</button>
+            <button class="save-btn" data-inputID="#10am-text">Save</button>
         </div>
 
     </main>
