completed the javascript code needed to run the application

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <main>
         <div>
-            <label for="9am-text">9:00 am</label>
+            <label for="9am-text">09:00 am</label>
             <input type="text" id="9am-text">
             <button class="save-btn" data-inputID="#9am-text">Save</button>
         </div>
@@ -30,6 +30,51 @@
             <input type="text" id="10am-text">
             <button class="save-btn" data-inputID="#10am-text">Save</button>
         </div>
+
+        <div>
+            <label for="10am-text">11:00 am</label>
+            <input type="text" id="11am-text">
+            <button class="save-btn" data-inputID="#11am-text">Save</button>
+        </div>
+
+        <div>
+            <label for="10am-text">12:00 pm</label>
+            <input type="text" id="12pm-text">
+            <button class="save-btn" data-inputID="#12pm-text">Save</button>
+        </div>
+
+        <div>
+            <label for="9am-text">01:00 pm</label>
+            <input type="text" id="1pm-text">
+            <button class="save-btn" data-inputID="#1pm-text">Save</button>
+        </div>
+
+        <div>
+            <label for="10am-text">02:00 pm</label>
+            <input type="text" id="2pm-text">
+            <button class="save-btn" data-inputID="#2pm-text">Save</button>
+        </div>
+
+        <div>
+            <label for="10am-text">03:00 pm</label>
+            <input type="text" id="3pm-text">
+            <button class="save-btn" data-inputID="#3pm-text">Save</button>
+        </div>
+
+        <div>
+            <label for="10am-text">04:00 pm</label>
+            <input type="text" id="4pm-text">
+            <button class="save-btn" data-inputID="#4pm-text">Save</button>
+        </div>
+
+        <div>
+            <label for="10am-text">05:00 pm</label>
+            <input type="text" id="5pm-text">
+            <button class="save-btn" data-inputID="#5pm-text">Save</button>
+        </div>
+
+
+
 
     </main>
 
