fixed the styling and added a Readme file

--- a/index.html
+++ b/index.html
@@ -7,69 +7,70 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css"> 
+    <title>Day Planner</title>
 
 </head>
 
 <body>
 
-    <header>
-        <h1>Work Day Planner</h1>
-        <p>December 9th, 2019</p>
+    <header class="header">
+        <h1 class="title">Work Day Planner</h1>
+        <p class="date">December 9th, 2019</p>
     </header>
 
-    <main>
+    <main class="main">
         <div>
-            <label for="9am-text">09:00 am</label>
-            <input type="text" id="9am-text">
+            <label for="9am-text" class="label">09:00 am</label>
+            <input type="text" id="9am-text" class="inputTextBox">
             <button class="save-btn" data-inputID="#9am-text">Save</button>
         </div>
 
         <div>
-            <label for="10am-text">10:00 am</label>
-            <input type="text" id="10am-text">
+            <label for="10am-text" class="label">10:00 am</label>
+            <input type="text" id="10am-text" class="inputTextBox">
             <button class="save-btn" data-inputID="#10am-text">Save</button>
         </div>
 
         <div>
-            <label for="10am-text">11:00 am</label>
-            <input type="text" id="11am-text">
+            <label for="10am-text" class="label">11:00 am</label>
+            <input type="text" id="11am-text" class="inputTextBox">
             <button class="save-btn" data-inputID="#11am-text">Save</button>
         </div>
 
         <div>
-            <label for="10am-text">12:00 pm</label>
-            <input type="text" id="12pm-text">
+            <label for="10am-text" class="label">12:00 pm</label>
+            <input type="text" id="12pm-text" class="inputTextBox">
             <button class="save-btn" data-inputID="#12pm-text">Save</button>
         </div>
 
         <div>
-            <label for="9am-text">01:00 pm</label>
-            <input type="text" id="1pm-text">
+            <label for="9am-text" class="label">01:00 pm</label>
+            <input type="text" id="1pm-text" class="inputTextBox">
             <button class="save-btn" data-inputID="#1pm-text">Save</button>
         </div>
 
         <div>
-            <label for="10am-text">02:00 pm</label>
-            <input type="text" id="2pm-text">
+            <label for="10am-text" class="label">02:00 pm</label>
+            <input type="text" id="2pm-text" class="inputTextBox">
             <button class="save-btn" data-inputID="#2pm-text">Save</button>
         </div>
 
         <div>
-            <label for="10am-text">03:00 pm</label>
-            <input type="text" id="3pm-text">
+            <label for="10am-text" class="label">03:00 pm</label>
+            <input type="text" id="3pm-text" class="inputTextBox">
             <button class="save-btn" data-inputID="#3pm-text">Save</button>
         </div>
 
         <div>
-            <label for="10am-text">04:00 pm</label>
-            <input type="text" id="4pm-text">
+            <label for="10am-text" class="label">04:00 pm</label>
+            <input type="text" id="4pm-text" class="inputTextBox">
             <button class="save-btn" data-inputID="#4pm-text">Save</button>
         </div>
 
         <div>
-            <label for="10am-text">05:00 pm</label>
-            <input type="text" id="5pm-text">
+            <label for="10am-text" class="label">05:00 pm</label>
+            <input type="text" id="5pm-text" class="inputTextBox">
             <button class="save-btn" data-inputID="#5pm-text">Save</button>
         </div>
 
